--- a/QuickGridDemo.Blazor/Pages/Index.razor
+++ b/QuickGridDemo.Blazor/Pages/Index.razor
@@ -12,7 +12,7 @@
         <ColumnOptions>
             <input @bind="@filter" placeholder="Search..." class="form-control" autofocus
                    @bind:event="oninput"
-                   @onchange="UpdateFilter" />
+                   @bind:after="UpdateFilter" />
         </ColumnOptions>
     </PropertyColumn>
 </QuickGrid>
@@ -23,7 +23,7 @@
     public IProductRepository? ProductsRepository { get; set; }
 
     private IQueryable<Product>? products;
-    private PaginationState pagination = new PaginationState { ItemsPerPage = 10 };
+    private PaginationState pagination = new PaginationState { ItemsPerPage = 30 };
     private string? filter;
 
     protected override void OnInitialized()
